--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -128,6 +128,25 @@
   height: 70px;
 }
 
+.pagination{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+}
+
+.pagination button{
+    padding: 0.25rem 0.5rem;
+    color: white;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    font-size: .625rem;
+}
+
+
 /* Media Queryes */
 
 @media screen and (min-width: 380px) {
