--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -153,12 +153,23 @@
   .pokemons{
     grid-template-columns: 1fr 1fr;
   }
+
+
+}
+
+@media screen and (max-width: 515px){
+  .pokemon .detail img{
+    height: 15vh;
+  }
 }
 
 @media screen and (min-width: 576px) {
   .pokemons{
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+
+
 }
 
 @media screen and (min-width: 992px) {
